--- a/project/res/values-ja/strings.xml
+++ b/project/res/values-ja/strings.xml
@@ -96,6 +96,10 @@
     <string name="trip_to">目的地 :</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">旅行のデータがありません。</string>
+    <!-- Tablet Trip bucket, Book Flight button text -->
+    <string name="trip_bucket_book_flight">航空券を予約</string>
+    <!-- Tablet Trip bucket, Book Hotel button text -->
+    <string name="trip_bucket_book_hotel">ホテルを予約</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">%1$sへのフライト</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -740,6 +744,7 @@
     <string name="share_template_subject_car_no_dates">レンタカー</string>
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">%1$sをレンタルしました</string>
+    <string name="share_template_short_car_type_an">%1$sをレンタルしました</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">(%1$s ～ %2$s)</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
