--- a/project/res/values-nb/strings.xml
+++ b/project/res/values-nb/strings.xml
@@ -96,6 +96,10 @@
     <string name="trip_to">Reise til</string>
     <!-- Trip bucket, trip is empty message -->
     <string name="trip_empty">Resien er tom.</string>
+    <!-- Tablet Trip bucket, Book Flight button text -->
+    <string name="trip_bucket_book_flight">Bestill flyvning</string>
+    <!-- Tablet Trip bucket, Book Hotel button text -->
+    <string name="trip_bucket_book_hotel">Bestill hotell</string>
     <!-- Actionbar Tablet Resutls Flights Title e.g. "Flights to Paris"-->
     <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flyvninger til %1$s</string>
     <!-- Actionbar Tablet Results Hotels Title e.g. "Paris Hotels"-->
@@ -740,6 +744,7 @@
     <string name="share_template_subject_car_no_dates">Min leiebil</string>
     <!-- 1: vehicle type -->
     <string name="share_template_short_car_type">Jeg har leid en %1$s</string>
+    <string name="share_template_short_car_type_an">Jeg har leid en %1$s</string>
     <!-- 1: pick up date 2: drop off date -->
     <string name="share_template_short_car_dates">fra %1$s – %2$s</string>
     <!-- Start of share email.  %1$s is the car rental vendor name (e.g., "Advantage") -->
