--- a/project/res/values-th/strings.xml
+++ b/project/res/values-th/strings.xml
@@ -166,6 +166,8 @@
     <string name="out_of_5">จาก 5</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">อ่านรีวิว</string>
+    <!-- "No Reviews" user reviews button text, when there are no reviews available -->
+    <string name="No_Reviews">ไม่มีรีวิว</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">ไม่สามารถขอคืนเงินได้</string>
 
@@ -176,6 +178,10 @@
     <string name="flight_cities_TEMPLATE">%1$s ไปยัง %2$s</string>
     <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
     <string name="flight_on_time_TEMPLATE">ตรงเวลา %s%%</string>
+
+    <!-- Tablet flight trip bucket -->
+    <!-- Label describing this flight is a round trip flight. -->
+    <string name="round_trip">ไป-กลับ</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
