--- a/project/res/values-zh/strings.xml
+++ b/project/res/values-zh/strings.xml
@@ -166,6 +166,8 @@
     <string name="out_of_5">满分 5 分</string>
     <!-- "Read Reviews" user reviews button text -->
     <string name="Read_Reviews">阅读点评</string>
+    <!-- "No Reviews" user reviews button text, when there are no reviews available -->
+    <string name="No_Reviews">没有点评</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">不可退款</string>
 
@@ -176,6 +178,10 @@
     <string name="flight_cities_TEMPLATE">%1$s - %2$s</string>
     <!-- A label describing the percent this flight is on time. e.g. "71% on time"-->
     <string name="flight_on_time_TEMPLATE">%s%% 准点</string>
+
+    <!-- Tablet flight trip bucket -->
+    <!-- Label describing this flight is a round trip flight. -->
+    <string name="round_trip">往返</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -602,9 +608,9 @@
     <string name="car_category_oversize">特大型车</string>
 
     <!-- Car types -->
-    <string name="car_type_two_door">两个门轿车</string>
-    <string name="car_type_three_door">三个门轿车</string>
-    <string name="car_type_four_door">四个门轿车</string>
+    <string name="car_type_two_door">两个门 轿车</string>
+    <string name="car_type_three_door">三个门 轿车</string>
+    <string name="car_type_four_door">四个门 轿车</string>
     <string name="car_type_van">箱型车</string>
     <string name="car_type_wagon">旅行车</string>
     <string name="car_type_limousine">豪华轿车</string>
